change class name of top page

--- a/about/index.html
+++ b/about/index.html
@@ -155,7 +155,7 @@
             <div class="row">
               <div class="col">
                 <div class="section-title">
-                  <h2 class="section-title__jp">浜⼩路 → 久保 → ⽥端</h2>
+                  <h2 class="section-subtitle2">浜⼩路 → 久保 → ⽥端</h2>
                 </div>
                 <p>
                   祖⽗⺟の代から数えて３代⽬にあたります。実は祖⽗⺟の姓は浜⼩路（はましょうじ）。⺟が継いだので⽗の姓となり、久保。そして私たちの代も娘が継いだので、夫の姓となり、⽥端。でも「久保さんちのお⽶」で名が通ってしまったので、混乱させてはいけないと考え「久保」で通すことにしました。わかりづらくてすみません。
@@ -176,7 +176,7 @@
             <div class="row">
               <div class="col">
                 <div class="section-title">
-                  <h2 class="section-title__jp">
+                  <h2 class="section-subtitle2">
                     企業勤めの経験が⼯夫させる。
                   </h2>
                 </div>
@@ -197,7 +197,7 @@
         <section class="about-section04">
           <div class="container">
             <h2 class="section-main-title">
-              ⾯積が広ければ、<br class="u-br-sp" />経験も幅広くなる。
+              ⾯積が広ければ、<br class="br-sp" />経験も幅広くなる。
             </h2>
             <div class="about-section04__inner">
               <div class="section-title"></div>
@@ -284,7 +284,7 @@
           <h2 class="section-main-title">お問い合わせ</h2>
           <div class="row">
             <div class="col">
-              <h3 class="section-title__en">SNS ACCOUNT</h3>
+              <h3 class="section-subtitle1">SNS ACCOUNT</h3>
               <p class="font-large font-bold text-left">
                 日々の我が家のお米づくりを発信しています。
               </p>
@@ -310,13 +310,13 @@
               </ul>
             </div>
             <div class="col">
-              <h3 class="section-title__en">CONTACT</h3>
+              <h3 class="section-subtitle1">CONTACT</h3>
               <a href="tel:025-523-7139" class="footer-contact__tel"
                 >025-523-7139</a
               >
               <p class="mb-mainfont-bold">受付時間：10:00〜18:00(不定休)</p>
               <p class="footer-contact__address font-bold">
-                〒943-0186 <br class="u-br-sp" />新潟県上越市大字市野江353番地1
+                〒943-0186 <br class="br-sp" />新潟県上越市大字市野江353番地1
               </p>
               <a href="./contact/index.html" class="btn-outline mb-sm">
                 <span>
