--- a/contact/index.html
+++ b/contact/index.html
@@ -112,10 +112,10 @@
           <div class="container">
             <div class="page-lead__content">
               お米についてのご相談、<br
-                class="u-br-sp"
+                class="br-sp"
               />ご購入についてのご連絡は<br />
               下記フォームまたはお電話にて<br
-                class="u-br-sp"
+                class="br-sp"
               />お気軽にお問い合わせください。
               <a href="tel:0978-32-4831" class="tel"
                 ><img
@@ -244,7 +244,7 @@
           <h2 class="section-main-title">お問い合わせ</h2>
           <div class="row">
             <div class="col">
-              <h3 class="section-title__en">SNS ACCOUNT</h3>
+              <h3 class="section-subtitle1">SNS ACCOUNT</h3>
               <p class="font-large font-bold text-left">
                 日々の我が家のお米づくりを発信しています。
               </p>
@@ -270,13 +270,13 @@
               </ul>
             </div>
             <div class="col">
-              <h3 class="section-title__en">CONTACT</h3>
+              <h3 class="section-subtitle1">CONTACT</h3>
               <a href="tel:025-523-7139" class="footer-contact__tel"
                 >025-523-7139</a
               >
               <p class="mb-mainfont-bold">受付時間：10:00〜18:00(不定休)</p>
               <p class="footer-contact__address font-bold">
-                〒943-0186 <br class="u-br-sp" />新潟県上越市大字市野江353番地1
+                〒943-0186 <br class="br-sp" />新潟県上越市大字市野江353番地1
               </p>
               <a href="./contact/index.html" class="btn-outline mb-sm">
                 <span>
