--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
 
     <main role="main">
       <section class="top-main-wrapper" id="top">
-        <div class="top-main scroll-point"></div>
-        <div class="top-hero__scroll__inner">
+        <div class="top-main"></div>
+        <div class="top-hero-scroll">
           <svg
             role="img"
             aria-hidden="true"
-            class="top-hero__scroll__circle"
+            class="top-hero-scroll-circle"
             width="134"
             height="134"
             viewBox="0 0 134 134"
@@ -98,7 +98,7 @@
           <svg
             role="img"
             aria-hidden="true"
-            class="top-hero__scroll__arrow"
+            class="top-hero-scroll-arrow"
             width="20"
             height="21"
             viewBox="0 0 20 21"
@@ -114,29 +114,34 @@
       </section>
       <section class="top-message" id="message">
         <div class="container">
-          <h2 class="section-main-title">私たちの想い</h2>
-          <div class="section-title font-rl">
-            <p class="section-title__en">OUR MESSAGE</p>
-            <p class="section-title__jp">
+          <h2 class="section-main-title animation">私たちの想い</h2>
+          <div class="section-title font-rl animation">
+            <p class="section-subtitle1">OUR MESSAGE</p>
+            <p class="section-subtitle2">
               ちゃんと美味しいお米を<br />皆さまに
             </p>
           </div>
           <div class="text-center">
-            <a href="message/index.html" class="btn">私たちの想いへ</a>
+            <a href="message/index.html" class="btn-outline m-auto">
+              <span>
+                <span>私たちの想いへ</span>
+                <span></span>
+              </span>
+            </a>
           </div>
         </div>
       </section>
 
       <section id="top-making" class="top-making" id="making">
         <div class="container">
-          <h2 class="section-main-title">お米を作る工程</h2>
+          <h2 class="section-main-title animation">お米を作る工程</h2>
           <div class="row">
-            <div class="top-making__content">
+            <div class="top-making-content">
               <div class="section-title">
-                <p class="section-title__en">3月初旬</p>
-                <h2 class="section-title__jp">苗代づくり</h2>
+                <p class="section-subtitle1">3月初旬</p>
+                <h2 class="section-subtitle2">苗代づくり</h2>
               </div>
-              <div class="top-making__image-sp">
+              <div class="top-making-image-sp">
                 <ul class="slideshow animation">
                   <li>
                     <span>
@@ -171,7 +176,7 @@
                 毎日の水やりや保温・風対策を施します。
               </p>
             </div>
-            <div class="top-making__image-pc">
+            <div class="top-making-image-pc">
               <ul class="slideshow animation">
                 <li>
                   <span>
@@ -201,12 +206,12 @@
             </div>
           </div>
           <div class="row-reverse">
-            <div class="top-making__content">
+            <div class="top-making-content">
               <div class="section-title">
-                <p class="section-title__en">3月中旬</p>
-                <h2 class="section-title__jp">種子づくり</h2>
+                <p class="section-subtitle1">3月中旬</p>
+                <h2 class="section-subtitle2">種子づくり</h2>
               </div>
-              <div class="top-making__image-sp">
+              <div class="top-making-image-sp">
                 <img
                   src="./assets/img/index/making/2/pic-1.jpg"
                   class="animation"
@@ -219,7 +224,7 @@
                 温度調整や芽が出過ぎないように管理します。
               </p>
             </div>
-            <div class="top-making__image-pc">
+            <div class="top-making-image-pc">
               <img
                 src="./assets/img/index/making/2/pic-1.jpg"
                 class="animation"
@@ -228,12 +233,12 @@
             </div>
           </div>
           <div class="row">
-            <div class="top-making__content">
+            <div class="top-making-content">
               <div class="section-title">
-                <p class="section-title__en">3月下旬~5月</p>
-                <h2 class="section-title__jp">播種・育苗</h2>
+                <p class="section-subtitle1">3月下旬~5月</p>
+                <h2 class="section-subtitle2">播種・育苗</h2>
               </div>
-              <div class="top-making__image-sp">
+              <div class="top-making-image-sp">
                 <ul class="slideshow animation">
                   <li>
                     <span>
@@ -267,7 +272,7 @@
                 1週間×3~4回に分けて播種します。
               </p>
             </div>
-            <div class="top-making__image-pc">
+            <div class="top-making-image-pc">
               <ul class="slideshow animation">
                 <li>
                   <span>
@@ -297,12 +302,12 @@
             </div>
           </div>
           <div class="row-reverse">
-            <div class="top-making__content">
+            <div class="top-making-content">
               <div class="section-title">
-                <p class="section-title__en">4月上旬~</p>
-                <h2 class="section-title__jp">田起こし</h2>
+                <p class="section-subtitle1">4月上旬~</p>
+                <h2 class="section-subtitle2">田起こし</h2>
               </div>
-              <div class="top-making__image-sp">
+              <div class="top-making-image-sp">
                 <ul class="slideshow animation">
                   <li>
                     <span>
@@ -339,7 +344,7 @@
                 にすると共に平らに均等にします。
               </p>
             </div>
-            <div class="top-making__image-pc">
+            <div class="top-making-image-pc">
               <ul class="slideshow animation">
                 <li>
                   <span>
@@ -369,12 +374,12 @@
             </div>
           </div>
           <div class="row">
-            <div class="top-making__content">
+            <div class="top-making-content">
               <div class="section-title">
-                <p class="section-title__en">4月中旬~6月上旬</p>
-                <h2 class="section-title__jp">田植え</h2>
+                <p class="section-subtitle1">4月中旬~6月上旬</p>
+                <h2 class="section-subtitle2">田植え</h2>
               </div>
-              <div class="top-making__image-sp">
+              <div class="top-making-image-sp">
                 <ul class="slideshow animation">
                   <li>
                     <span>
@@ -407,7 +412,7 @@
                 苗が成長し過ぎないように どんどん進めていきます。
               </p>
             </div>
-            <div class="top-making__image-pc">
+            <div class="top-making-image-pc">
               <ul class="slideshow animation">
                 <li>
                   <span>
@@ -437,12 +442,12 @@
             </div>
           </div>
           <div class="row-reverse">
-            <div class="top-making__content">
+            <div class="top-making-content">
               <div class="section-title">
-                <p class="section-title__en">6月上旬</p>
-                <h2 class="section-title__jp">大豆・豆播き</h2>
+                <p class="section-subtitle1">6月上旬</p>
+                <h2 class="section-subtitle2">大豆・豆播き</h2>
               </div>
-              <div class="top-making__image-sp">
+              <div class="top-making-image-sp">
                 <img
                   src="./assets/img/index/making/6/pic-1.jpg"
                   class="animation"
@@ -454,7 +459,7 @@
                 土壌を再生させる為に乾燥した地で栽培する大豆を育てます。
               </p>
             </div>
-            <div class="top-making__image-pc">
+            <div class="top-making-image-pc">
               <img
                 src="./assets/img/index/making/6/pic-1.jpg"
                 class="animation"
@@ -463,12 +468,12 @@
             </div>
           </div>
           <div class="row">
-            <div class="top-making__content">
+            <div class="top-making-content">
               <div class="section-title">
-                <p class="section-title__en">4月~収穫まで</p>
-                <h2 class="section-title__jp">水管理・草刈り(除草含む)</h2>
+                <p class="section-subtitle1">4月~収穫まで</p>
+                <h2 class="section-subtitle2">水管理・草刈り(除草含む)</h2>
               </div>
-              <div class="top-making__image-sp">
+              <div class="top-making-image-sp">
                 <img
                   src="./assets/img/index/making/7/pic-1.jpg"
                   class="animation"
@@ -484,7 +489,7 @@
                 ・草刈りや水田の水量は収穫までずっと管理します。
               </p>
             </div>
-            <div class="top-making__image-pc">
+            <div class="top-making-image-pc">
               <img
                 src="./assets/img/index/making/7/pic-1.jpg"
                 class="animation"
@@ -493,12 +498,12 @@
             </div>
           </div>
           <div class="row-reverse">
-            <div class="top-making__content">
+            <div class="top-making-content">
               <div class="section-title">
-                <p class="section-title__en">6月中旬~</p>
-                <h2 class="section-title__jp">中⼲し</h2>
+                <p class="section-subtitle1">6月中旬~</p>
+                <h2 class="section-subtitle2">中⼲し</h2>
               </div>
-              <div class="top-making__image-sp">
+              <div class="top-making-image-sp">
                 <img
                   src="./assets/img/index/making/8/pic-1.jpg"
                   class="animation"
@@ -510,7 +515,7 @@
                 分げつ後、 溝切をすることで水の管理や土の管理をし易くします。
               </p>
             </div>
-            <div class="top-making__image-pc">
+            <div class="top-making-image-pc">
               <img
                 src="./assets/img/index/making/8/pic-1.jpg"
                 class="animation"
@@ -519,12 +524,12 @@
             </div>
           </div>
           <div class="row">
-            <div class="top-making__content">
+            <div class="top-making-content">
               <div class="section-title">
-                <p class="section-title__en">7月~9月</p>
-                <h2 class="section-title__jp">草刈り ・ 防虫対策</h2>
+                <p class="section-subtitle1">7月~9月</p>
+                <h2 class="section-subtitle2">草刈り ・ 防虫対策</h2>
               </div>
-              <div class="top-making__image-sp">
+              <div class="top-making-image-sp">
                 <ul class="slideshow animation">
                   <li>
                     <span>
@@ -557,7 +562,7 @@
                 ドローンによる適した時期に防虫防除など
               </p>
             </div>
-            <div class="top-making__image-pc">
+            <div class="top-making-image-pc">
               <ul class="slideshow animation">
                 <li>
                   <span>
@@ -587,12 +592,12 @@
             </div>
           </div>
           <div class="row-reverse">
-            <div class="top-making__content">
+            <div class="top-making-content">
               <div class="section-title">
-                <p class="section-title__en">9月~</p>
-                <h2 class="section-title__jp">収穫</h2>
+                <p class="section-subtitle1">9月~</p>
+                <h2 class="section-subtitle2">収穫</h2>
               </div>
-              <div class="top-making__image-sp">
+              <div class="top-making-image-sp">
                 <ul class="slideshow animation">
                   <li>
                     <span>
@@ -628,7 +633,7 @@
                 を行います。
               </p>
             </div>
-            <div class="top-making__image-pc">
+            <div class="top-making-image-pc">
               <ul class="slideshow animation">
                 <li>
                   <span>
@@ -658,12 +663,12 @@
             </div>
           </div>
           <div class="row">
-            <div class="top-making__content">
+            <div class="top-making-content">
               <div class="section-title">
-                <p class="section-title__en">10月後半</p>
-                <h2 class="section-title__jp">大豆収穫</h2>
+                <p class="section-subtitle1">10月後半</p>
+                <h2 class="section-subtitle2">大豆収穫</h2>
               </div>
-              <div class="top-making__image-sp">
+              <div class="top-making-image-sp">
                 <img
                   src="./assets/img/index/making/11/pic-1.jpg"
                   class="animation"
@@ -672,7 +677,7 @@
               </div>
               <p class="mb-lg"></p>
             </div>
-            <div class="top-making__image-pc">
+            <div class="top-making-image-pc">
               <img
                 src="./assets/img/index/making/11/pic-1.jpg"
                 class="animation"
@@ -681,12 +686,12 @@
             </div>
           </div>
           <div class="row-reverse">
-            <div class="top-making__content">
+            <div class="top-making-content">
               <div class="section-title">
-                <p class="section-title__en">雪時期</p>
-                <h2 class="section-title__jp">稲作に影響しない時期以外</h2>
+                <p class="section-subtitle1">雪時期</p>
+                <h2 class="section-subtitle2">稲作に影響しない時期以外</h2>
               </div>
-              <div class="top-making__image-sp">
+              <div class="top-making-image-sp">
                 <ul class="slideshow animation">
                   <img
                     src="./assets/img/index/making/12/pic-1.jpg"
@@ -697,7 +702,7 @@
               </div>
               <p class="mb-lg">現在は主に春野菜と夏野菜を作っております。</p>
             </div>
-            <div class="top-making__image-pc">
+            <div class="top-making-image-pc">
               <img
                 src="./assets/img/index/making/12/pic-1.jpg"
                 class="animation"
@@ -710,33 +715,46 @@
 
       <section class="top-about" id="about">
         <div class="container">
-          <h2 class="section-main-title">橋本農場</h2>
-          <div class="top-about__content">
-            <div class="section-title">
-              <p class="section-title__en">HASHIMOTO.farming</p>
-              <h2 class="section-title__jp">水稲の生産販売／野菜の生産販売</h2>
-            </div>
-            <p class="mb-lg">
-              当社は代々水稲に取り組んできました。
-              現在は40ha程度の農地を所有し、うるち米、もち米、飼料米など多種にわたり生産しております。
-              広大な土地を活用するために野菜の栽培などにもチャレンジをしております。
-              美味しいお米作りや働きやすい環境づくりにいそしんでおります。
-            </p>
-            <div class="text-center">
-              <a href="about/index.html" class="btn">久保さんちへ</a>
+          <h2 class="section-main-title animation">橋本農場</h2>
+          <div class="top-about-content">
+            <div class="gridhalf-row">
+              <div class="gridhalf-col animation">
+                <div class="section-title">
+                  <p class="section-subtitle1">HASHIMOTO.farming</p>
+                  <h2 class="section-subtitle2">
+                    水稲の生産販売／野菜の生産販売
+                  </h2>
+                </div>
+                <p class="mb-lg">
+                  当社は代々水稲に取り組んできました。
+                  現在は40ha程度の農地を所有し、うるち米、もち米、飼料米など多種にわたり生産しております。
+                  広大な土地を活用するために野菜の栽培などにもチャレンジをしております。
+                  美味しいお米作りや働きやすい環境づくりにいそしんでおります。
+                </p>
+                <div class="text-center">
+                  <a href="about/index.html" class="btn-outline">
+                    <span>
+                      <span>もっと見る</span>
+                      <span></span>
+                    </span>
+                  </a>
+                </div>
+              </div>
+              <div class="gridhalf-col animation">
+                <img
+                  src="./assets/img/index/making/pic--011.png"
+                  alt="pic--011"
+                />
+              </div>
             </div>
           </div>
         </div>
       </section>
 
-      <section class="top-shopping" id="shopping">
+      <section class="top-shop" id="shopping">
         <div class="container">
-          <h2 class="section-main-title">お届けする商品</h2>
-          <!-- <div class="section-title">
-            <h2 class="top-shopping__title">お届け</h2>
-            <p class="section-title__en">SHOPPING METHOD</p>
-          </div> -->
-          <div class="top-shopping__list mb-lg">
+          <h2 class="section-main-title animation">お届けする商品</h2>
+          <div class="top-shop-list mb-lg animation">
             <img
               src="assets/img/index/shopping/pic--01.png"
               alt="２週間で食べ切る量で"
@@ -755,29 +773,31 @@
             />
           </div>
           <div class="text-center">
-            <a href="shopping/index.html" class="btn"
-              >こんなお届けができますへ</a
-            >
+            <a href="shopping/index.html" class="btn-outline m-auto">
+              <span>
+                <span>もっと見る</span>
+                <span></span>
+              </span>
+            </a>
           </div>
         </div>
       </section>
 
       <section class="top-instagram">
         <div class="container">
-          <h2 class="section-main-title">インスタ（ニュースなど）</h2>
-          <div class="top-instagram__inner">
-            <!-- <div class="section-title">
-              <h2 class="section-title__jp">日々</h2>
-              <p class="section-title__en">INSTAGRAM</p>
-            </div> -->
+          <h2 class="section-main-title animation">インスタ（ニュースなど）</h2>
+          <div class="top-instagram-inner">
             <div id="top-instagram"></div>
             <div class="text-center">
               <a
                 href="https://www.instagram.com/hashimoto.farming/"
-                class="btn"
-                target="_blank"
-                >公式インスタグラムへ</a
+                class="btn-outline m-auto"
               >
+                <span>
+                  <span>公式インスタグラムへ</span>
+                  <span></span>
+                </span>
+              </a>
             </div>
           </div>
         </div>
@@ -794,7 +814,7 @@
             <div class="contact-content">
               <p>(有) 橋本農場</p>
               <p>
-                〒943-0186 <br class="u-br-sp" />新潟県上越市大字市野江353番地1
+                〒943-0186 <br class="br-sp" />新潟県上越市大字市野江353番地1
               </p>
               <p>025-523-7139</p>
               <a href="./contact/index.html" class="btn-outline mb-sm">
