--- a/message/index.html
+++ b/message/index.html
@@ -63,7 +63,7 @@
         </div>
         <section class="page-lead">
           <h2 class="page-lead__title">
-            ちゃんと美味しい<br class="u-br-sp" />お米を皆さまに
+            ちゃんと美味しい<br class="br-sp" />お米を皆さまに
           </h2>
           <p class="page-lead__content">
             ⼀般に流通している多くのお⽶は、 同じ品種を栽培する地域の⽣産者から集められ、 さまざまな⼿法で作られたお⽶が混ぜられてしまいます。 <br /><br />
@@ -109,10 +109,10 @@
           <h2 class="message-section04__title">私たちの想い</h2>
           <div class="message-section04__content">
             あたり前にできることを、<br
-              class="u-br-sp"
+              class="br-sp"
             />また、あたり前にやろう。 <br />
             その積み重ねだけが、<br
-              class="u-br-sp"
+              class="br-sp"
             />おいしいお⽶づくりへの道なのだから。
           </div>
           <img
@@ -127,9 +127,9 @@
       <div class="container">
         <div class="footer-contact row">
           <div class="col">
-            <h2 class="section-title__en">SNS ACCOUNT</h2>
+            <h2 class="section-subtitle1">SNS ACCOUNT</h2>
             <p class="u-font-size--large u-font-bold">
-              日々の我が家のお米づくりを<br class="u-br-sp" />発信しています。
+              日々の我が家のお米づくりを<br class="br-sp" />発信しています。
             </p>
             <ul class="footer-sns-list">
               <li>
@@ -153,7 +153,7 @@
             </ul>
           </div>
           <div class="col">
-            <h2 class="section-title__en">CONTACT</h2>
+            <h2 class="section-subtitle1">CONTACT</h2>
             <a href="tel:025-523-7139" class="footer-contact__tel"
               >025-523-7139</a
             >
@@ -161,7 +161,7 @@
               受付時間：10:00〜18:00(不定休)
             </p>
             <p class="footer-contact__address u-font-bold">
-              〒943-0186 <br class="u-br-sp" />新潟県上越市大字市野江353番地1
+              〒943-0186 <br class="br-sp" />新潟県上越市大字市野江353番地1
             </p>
             <a href="" class="btn-outline u-margin-bottom--small"
               >お問い合わせはこちら<img
