--- a/shopping/index.html
+++ b/shopping/index.html
@@ -74,8 +74,8 @@
               />
             </div>
             <div class="section-title">
-              <h2 class="section-title__jp">
-                保冷庫にて<br class="u-br-sp" />温度管理しております。
+              <h2 class="section-subtitle2">
+                保冷庫にて<br class="br-sp" />温度管理しております。
               </h2>
             </div>
             <p>
@@ -92,7 +92,7 @@
               />
             </div>
             <div class="section-title">
-              <h2 class="section-title__jp">真空パックや定期便</h2>
+              <h2 class="section-subtitle2">真空パックや定期便</h2>
             </div>
             <p>
               精米前の30kgは少しずつ、必要な分だけ精米することで鮮度を保ちおいしく食べられますが家庭や近所に精米機がない方が多数かと思います。
@@ -108,9 +108,9 @@
               />
             </div>
             <div class="section-title">
-              <h2 class="section-title__jp">
+              <h2 class="section-subtitle2">
                 300g(2合)から1kg、2kg、5kg<br
-                  class="u-br-sp"
+                  class="br-sp"
                 />と細かく対応可能です。
               </h2>
             </div>
@@ -127,8 +127,8 @@
               />
             </div>
             <div class="section-title">
-              <h2 class="section-title__jp">
-                ふるさと納税にも<br class="u-br-sp" />出品しております。
+              <h2 class="section-subtitle2">
+                ふるさと納税にも<br class="br-sp" />出品しております。
               </h2>
             </div>
             <p>
@@ -145,9 +145,9 @@
       <div class="container">
         <div class="footer-contact row">
           <div class="col">
-            <h2 class="section-title__en">SNS ACCOUNT</h2>
+            <h2 class="section-subtitle1">SNS ACCOUNT</h2>
             <p class="font-large font-bold">
-              日々の我が家のお米づくりを<br class="u-br-sp" />発信しています。
+              日々の我が家のお米づくりを<br class="br-sp" />発信しています。
             </p>
             <ul class="footer-sns-list">
               <li>
@@ -171,13 +171,13 @@
             </ul>
           </div>
           <div class="col">
-            <h2 class="section-title__en">CONTACT</h2>
+            <h2 class="section-subtitle1">CONTACT</h2>
             <a href="tel:025-523-7139" class="footer-contact__tel"
               >025-523-7139</a
             >
             <p class="mb-mainfont-bold">受付時間：10:00〜18:00(不定休)</p>
             <p class="footer-contact__address font-bold">
-              〒943-0186 <br class="u-br-sp" />新潟県上越市大字市野江353番地1
+              〒943-0186 <br class="br-sp" />新潟県上越市大字市野江353番地1
             </p>
             <a href="" class="btn-outline mb-sm"
               >お問い合わせはこちら<img
